# shunting-yard

./: .gitignore  CMakeLists.txt  README.md
include/: arena.h  lexer.h  parser.h
include/lexer/: token.h  token_list.h  tokenizer.h
src/: arena.c  lexer.c  main.c  parser.c
src/lexer/: token.c  token_list.c  tokenizer.c
